restyling composer window to be smaller widthwise attempted to fix vertical-alignment of post_window relative to taskbar

--- a/public/css/style.less
+++ b/public/css/style.less
@@ -508,6 +508,7 @@ body .navbar .nodebb-inline-block {
 	display: none;
 
 	> div {
+		position: absolute;
 		height: 100%;
 		background: rgba(64, 64, 64, 0.6);
 
